[project]
name = "acadplot"
version = "0.1.0"
description = "A simple plotting tool using matplotlib for generating plots and subplots for research papers."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sudip Bhujel", email = "code@sudipbhujel.com.np" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"